        even when there are no results.

0.17    19 Dec 2007
        * add field_names() method to base Controller class. This is to aid development
        of CatalystX::CRUD::View implementations.

0.18    20 Dec 2007
        * added _no_page parameter support to the Model API.
        * added ::Model::Utils to help with DRY

0.19    21 Dec 2007
        * added Sort::SQL to Makefile.PL reqs.

0.20    31 Dec 2007
        * fix view_on_single_result() to check can_write()

0.21    04 Jan 2008
        * fix black magic can() in Model.pm

0.22    04 Jan 2008
        * add treat_like_int() support to Model::Utils

0.23    20 Jan 2008
        * added REST API
        * added allow_GET_writes Controller config option, to prevent casual GET /save or /delete requests.

0.24    22 Jan 2008
        * always fetch() in REST->default, to fix bug with no object being set for create()
        * always uc() the req method for comparison purposes
        * fix bug when checking the _http_method param to use params() instead of param() and use the first if multiple.
        * refactor REST to provide backwards compat with Controller for easy @ISA swap (as advertised)

0.25    1 Feb 2008
        * fix bug to clarify what happens when form_to_object() returns false.

0.26    xxx
        * fix bug in Iterator to test for !next() rather than !defined(next())
        * re-set action in ::REST->default so that RPC-style template naming works
        * use :Path instead of :Private on ::REST->default
        * fix several bugs with action() set in ::REST
        * ::Controller->form now calls NEXT::form. This is for REST compat and @INC oddness.
        * added new ::ModelAdapter class and refactored base Controller to use it.
        * moved make_pager() from base ::Model to ::Model::Utils
        * added new ::Test classes to ease writing controller-agnostic tests.
        * new, optional 'make_query' method in Controller.


       