@@ -1,7 +1,7 @@
 package CatalystX::CRUD::Object;
 use strict;
 use warnings;
-use base qw( CatalystX::CRUD Class::Accessor::Fast );
+use base qw( Class::Accessor::Fast CatalystX::CRUD );
 use Carp;
 
 __PACKAGE__->mk_ro_accessors(qw( delegate ));
@@ -96,6 +96,56 @@ sub create { shift->throw_error("must implement create") }
 sub read   { shift->throw_error("must implement read") }
 sub update { shift->throw_error("must implement update") }
 sub delete { shift->throw_error("must implement delete") }
+
+=head2 AUTOLOAD
+
+Some black magic hackery to make Object classes act like
+they are overloaded delegate()s.
+
+=cut
+
+sub AUTOLOAD {
+    my $obj       = shift;
+    my $obj_class = ref($obj) || $obj;
+    my $method    = our $AUTOLOAD;
+    $method =~ s/.*://;
+    return if $method eq 'DESTROY';
+    if ( $obj->delegate->can($method) ) {
+        return $obj->delegate->$method(@_);
+    }
+
+    $obj->throw_error(
+        "method '$method' not implemented in class '$obj_class'");
+
+}
+
+# this overrides the basic can()
+# to always call secondary can() on its delegate.
+# we have to UNIVERSAL::can because we are overriding can()
+# and would otherwise have a recursive nightmare.
+
+=head2 can( I<method> )
+
+Overrides basic can() method to call can() first on the delegate
+and secondly (fallback) on the Object class itself.
+
+=cut
+
+sub can {
+    my ( $obj, $method, @arg ) = @_;
+    if ( ref($obj) ) {
+
+        # object method tries object_class first,
+        # then the delegate().
+        return UNIVERSAL::can( ref($obj), $method )
+            || $obj->delegate->can( $method, @arg );
+    }
+    else {
+
+        # class method
+        return UNIVERSAL::can( $obj, $method );
+    }
+}
 
 1;
 __END__
